.metadata/.plugins/org.eclipse.cdt.ui/bl_config.build.log
23:58:45 **** Incremental Build of configuration Release for project bl_config ****
"D:\\sloeber_2019_esp32\\arduinoPlugin\\tools\\make\\make" all 
'Building file: ..\sloeber.ino.cpp'
'Starting C++ compile'
"D:\sloeber_2019_esp32\arduinoPlugin\packages\arduino\tools\avr-gcc\5.4.0-atmel3.6.1-arduino2/bin/avr-g++" -c -g -Os -Wall -Wextra -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -MMD -flto -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10802 -DARDUINO_AVR_NANO -DARDUINO_ARCH_AVR     -I"D:\sloeber_2019_esp32\arduinoPlugin\packages\arduino\hardware\avr\1.6.23\cores\arduino" -I"D:\sloeber_2019_esp32\arduinoPlugin\packages\arduino\hardware\avr\1.6.23\variants\eightanaloginputs" -I"D:\sloeber_2019_esp32\arduinoPlugin\packages\arduino\hardware\avr\1.6.23\libraries\SoftwareSerial\src" -MMD -MP -MF"sloeber.ino.cpp.d" -MT"sloeber.ino.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "..\sloeber.ino.cpp"  -o  "sloeber.ino.cpp.o"
..\sloeber.ino.cpp: In function 'void setup()':
..\sloeber.ino.cpp:17:14: error: 'OUTPUT' was not declared in this scope
   pinMode(9, OUTPUT);  // this pin will pull the HC-05 pin 34 (key pin) HIGH to switch module to AT mode
              ^
..\sloeber.ino.cpp:17:20: error: 'pinMode' was not declared in this scope
   pinMode(9, OUTPUT);  // this pin will pull the HC-05 pin 34 (key pin) HIGH to switch module to AT mode
                    ^
..\sloeber.ino.cpp:18:19: error: 'HIGH' was not declared in this scope
   digitalWrite(9, HIGH);
                   ^
..\sloeber.ino.cpp:18:23: error: 'digitalWrite' was not declared in this scope
   digitalWrite(9, HIGH);
                       ^
..\sloeber.ino.cpp:19:3: error: 'Serial' was not declared in this scope
   Serial.begin(9600);
   ^
..\sloeber.ino.cpp: In function 'void loop()':
..\sloeber.ino.cpp:29:5: error: 'Serial' was not declared in this scope
     Serial.write(BTSerial.read());
     ^
..\sloeber.ino.cpp:32:7: error: 'Serial' was not declared in this scope
   if (Serial.available())
       ^
subdir.mk:18: recipe for target 'sloeber.ino.cpp.o' failed
make: *** [sloeber.ino.cpp.o] Error 1

23:58:46 Build Failed. 9 errors, 0 warnings. (took 901ms)

